some config and 1st post

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.fabiomaia.org" # the base hostname & protocol for your site
 twitter_username: fwmm
 github_username:  fwmm
+contact: fwmmaia@gmail.com
 
 # Build settings
 markdown: kramdown
